tests/requests/invalid/001.py
from gunicorn import NoMoreData

request = NoMoreData
